0023264: cppcheck warning: Logical conjunction always evaluates to false

Replaced the '&&' operator with '||'. Otherwise the logical conjunction always evaluates to false.